# CMPE-275-Mini-2

./: .env.example  .gitignore  CMakeLists.txt  DEPLOYMENT_2HOST_GUIDE.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_START_2HOST.md  QUICK_START_WSL.md  README.md  README_2HOST_EXPERIMENT.md  README_WSL_SETUP.md  SETUP_2HOST_WSL_PORTFORWARD.md  analyze_metrics.py  benchmark.py  build.sh  clean.sh  cleanup_wsl_portforward.ps1  generate_proto.sh  setup_wsl_portforward.ps1  start_all.sh  start_all_unix.sh  stop_all.sh
configs/: process_a.json  process_b.json  process_c.json  process_d.json  process_e.json  process_f.json
configs-2host/: NETWORK_DIAGRAM.txt
configs-2host/mac/: process_b.json  process_c.json  start_green_and_leader.sh  stop_green_and_leader.sh
configs-2host/mac-abc/: process_a.json  start_green_and_leader.sh
configs-2host/mac-def/: process_e.json  start_pink.sh  stop_pink.sh
configs-2host/windows/: process_d.json  process_f.json  start_pink_team.sh  stop_pink_team.sh
fire-data/20200810/: 20200810-01.csv  20200810-03.csv  20200810-05.csv  20200810-07.csv  20200810-09.csv  20200810-11.csv  20200810-13.csv  20200810-15.csv  20200810-17.csv  20200810-19.csv  20200810-21.csv  20200810-23.csv
fire-data/20200814/: 20200814-01.csv  20200814-03.csv  20200814-05.csv  20200814-07.csv  20200814-09.csv  20200814-11.csv  20200814-13.csv  20200814-15.csv  20200814-17.csv  20200814-19.csv  20200814-21.csv  20200814-23.csv
fire-data/20200815/: 20200815-01.csv  20200815-03.csv  20200815-05.csv  20200815-07.csv  20200815-09.csv  20200815-11.csv  20200815-13.csv  20200815-15.csv  20200815-17.csv  20200815-19.csv  20200815-21.csv  20200815-23.csv
fire-data/20200816/: 20200816-01.csv  20200816-03.csv  20200816-05.csv  20200816-07.csv  20200816-09.csv  20200816-11.csv  20200816-13.csv  20200816-15.csv  20200816-17.csv  20200816-19.csv  20200816-21.csv  20200816-23.csv
fire-data/20200817/: 20200817-01.csv  20200817-03.csv  20200817-05.csv  20200817-07.csv  20200817-09.csv  20200817-11.csv  20200817-13.csv  20200817-15.csv  20200817-17.csv  20200817-19.csv  20200817-21.csv  20200817-23.csv
fire-data/20200818/: 20200818-01.csv  20200818-03.csv  20200818-05.csv  20200818-07.csv  20200818-09.csv  20200818-11.csv  20200818-13.csv  20200818-15.csv  20200818-17.csv  20200818-19.csv  20200818-21.csv  20200818-23.csv
fire-data/20200819/: 20200819-01.csv  20200819-03.csv  20200819-05.csv  20200819-07.csv  20200819-09.csv  20200819-11.csv  20200819-13.csv  20200819-15.csv  20200819-17.csv  20200819-19.csv  20200819-21.csv  20200819-23.csv
fire-data/20200820/: 20200820-01.csv  20200820-03.csv  20200820-05.csv  20200820-07.csv  20200820-09.csv  20200820-11.csv  20200820-13.csv  20200820-15.csv  20200820-17.csv  20200820-19.csv  20200820-21.csv  20200820-23.csv
fire-data/20200821/: 20200821-01.csv  20200821-03.csv  20200821-05.csv  20200821-07.csv  20200821-09.csv  20200821-11.csv  20200821-13.csv  20200821-15.csv  20200821-17.csv  20200821-19.csv  20200821-21.csv  20200821-23.csv
fire-data/20200822/: 20200822-01.csv  20200822-03.csv  20200822-05.csv  20200822-07.csv  20200822-09.csv  20200822-11.csv  20200822-13.csv  20200822-15.csv  20200822-17.csv  20200822-19.csv  20200822-21.csv  20200822-23.csv
fire-data/20200823/: 20200823-01.csv  20200823-03.csv  20200823-05.csv  20200823-07.csv  20200823-09.csv  20200823-11.csv  20200823-13.csv  20200823-15.csv  20200823-17.csv  20200823-19.csv  20200823-21.csv  20200823-23.csv
fire-data/20200824/: 20200824-01.csv  20200824-03.csv  20200824-05.csv  20200824-07.csv  20200824-09.csv  20200824-11.csv  20200824-13.csv  20200824-15.csv  20200824-17.csv  20200824-19.csv  20200824-21.csv  20200824-23.csv
fire-data/20200825/: 20200825-01.csv  20200825-03.csv  20200825-05.csv  20200825-07.csv  20200825-09.csv  20200825-11.csv  20200825-13.csv  20200825-15.csv  20200825-17.csv  20200825-19.csv  20200825-21.csv  20200825-23.csv
fire-data/20200826/: 20200826-01.csv  20200826-03.csv  20200826-05.csv  20200826-07.csv  (+8 more)
proto/: fire_query.proto
(+358 files in other folders)
